--- a/src/components/Feed/Posts.module.scss
+++ b/src/components/Feed/Posts.module.scss
@@ -1,8 +1,8 @@
 .Posts {
     width: 100%;
-    height: 95%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: auto;
+    // overflow: auto;
 }
